--- a/Ch03_Exercise/styles/style.css
+++ b/Ch03_Exercise/styles/style.css
@@ -46,16 +46,18 @@ a{
     text-align:justify;
     font-size: 95%;
 }
-.people{
-    font-size: 10px;
-}
 .center ul{
     padding-left: 20px;
 }
-.people h1{
+.people{
+    font-size: 10px;
+}
+.people .speakers{
     color: black;
     border-bottom: 3px solid #931420;
     border-top: 3px solid #931420;
+    border-radius: 15px;
+    box-shadow: 4px 4px #931420;
     padding: 5px 10px;
 }
 .footer{
