--- a/Ch09_Exercise/plugin/SlickNav/slicknav.css
+++ b/Ch09_Exercise/plugin/SlickNav/slicknav.css
@@ -90,13 +90,13 @@
     background-color: #fff; }
 
 .slicknav_btn {
-  margin: 5px 5px 6px;
   text-decoration: none;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  background-color: #222; }
+  background-color: #222; 
+}
 
 .slicknav_nav {
   color: #fff;
