--- a/Ch09_Exercise/plugin/SlickNav/slicknav.css
+++ b/Ch09_Exercise/plugin/SlickNav/slicknav.css
@@ -8,7 +8,7 @@
   display: block;
   vertical-align: middle;
   float: right;
-  padding: 0.438em 0.625em 0.438em 0.625em;
+  padding: 0.438em 1.625em 0.438em 0.625em;
   line-height: 1.125em;
   cursor: pointer; }
   .slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {
@@ -139,7 +139,7 @@
     padding: 0;
     margin: 0; }
 
-.slicknav_brand {
+.slicknav_brand {0
   color: #fff;
   font-size: 18px;
   line-height: 30px;
