--- a/Ch09_Exercise/styles/style.css
+++ b/Ch09_Exercise/styles/style.css
@@ -143,12 +143,14 @@ main{
     header .header_right{
         margin: -1.5em 0em 0.5em 0em;
     }
-    header h1 {
+    header .header_right h1 {
         font-size: 2em; 
+        padding: 0em 2em;
     }
-    header h2 {
+    header .header_right h2 {
         font-size: 1.2em;
         margin-bottom: 1em;
+        padding: 0em 1em;
     }
     #nav_menu {
         display: none;
@@ -168,11 +170,12 @@ main{
     .slicknav_btn{
         margin-right: 40px;
     }
-    header h1 {
+    header .header_right h1 {
         font-size: 2.5em; 
         text-align: center;
+        padding: 0em .6em;
     }
-    header h2 {
+    header .header_right h2 {
         font-size: 1.5em; 
     }
     p {
