--- a/Ch10_and_11_Exercise/plugin/SlickNav/slicknav.css
+++ b/Ch10_and_11_Exercise/plugin/SlickNav/slicknav.css
@@ -8,7 +8,7 @@
   display: block;
   vertical-align: middle;
   float: right;
-  padding: 0.438em 0.625em 0.438em 0.625em;
+  padding: 0.438em 1.625em 0.438em 0.625em;
   line-height: 1.125em;
   cursor: pointer; }
   .slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {
@@ -90,13 +90,13 @@
     background-color: #fff; }
 
 .slicknav_btn {
-  margin: 5px 5px 6px;
   text-decoration: none;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  background-color: #222; }
+  background-color: #222; 
+}
 
 .slicknav_nav {
   color: #fff;
@@ -139,7 +139,7 @@
     padding: 0;
     margin: 0; }
 
-.slicknav_brand {
+.slicknav_brand {0
   color: #fff;
   font-size: 18px;
   line-height: 30px;
